# rememberizer-mcp-ck1

./: README.md  pyproject.toml
src/mcp_server_rememberizer/: server.py
